--- a/weather.html
+++ b/weather.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>API Testing Grounds</title>
+        <title>API Testing Grounds - Weather</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
 
@@ -36,29 +36,29 @@
                 <div class="content-header">
                     <h1>
                         <a id="menu-toggle" href="#" class="btn btn-default"><i class="icon-reorder"></i></a>
-                        Simple Sidebar
+                        Weather!
                     </h1>
                 </div>
                 <!-- Keep all page content within the page-content inset div! -->
                 <div class="page-content inset">
                     <div class="row">
                         <div class="col-md-12">
-                            <p class="lead">This simple sidebar template has a hint of JavaScript to make the template responsive. It also includes Font Awesome icon fonts.</p>
+                            <p class="lead">This is our weather page.</p>
                         </div>
                         <div class="col-md-6">
-                            <p class="well">The template still uses the default Bootstrap rows and columns.</p>
+                            <p class="well">
+                                Current Temperature:
+                                <span class="weather-temperature"></span>
+                            </p>
                         </div>
                         <div class="col-md-6">
-                            <p class="well">But the full-width layout means that you wont be using containers.</p>
+                            <p class="well">
+                                Current Conditions:
+                                <span class="weather-description"></span>
+                            </p>
                         </div>
-                        <div class="col-md-4">
-                            <p class="well">Three Column Example</p>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="well">Three Column Example</p>
-                        </div>
-                        <div class="col-md-4">
-                            <p class="well">You get the idea! Do whatever you want in the page content area!</p>
+                        <div class="col-md-12">
+                            <p class="well"><img class="weather-icon" /></p>
                         </div>
                     </div>
                 </div>
@@ -68,8 +68,11 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-
+        
+        <script src="js/openWeather.min.js"></script>
+        
         <script src="js/main.js"></script>
+        <script src="js/weather.js"></script>
 
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
